--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "webpack-dev-server": "^3.8.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
